Add paragraphs module

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -16,6 +16,7 @@ module:
   entity_browser: 0
   entity_embed: 0
   entity_reference: 0
+  entity_reference_revisions: 0
   field: 0
   field_ui: 0
   file: 0
@@ -52,6 +53,7 @@ module:
   panelizer: 0
   panels: 0
   panels_ipe: 0
+  paragraphs: 0
   path: 0
   quickedit: 0
   rdf: 0
