--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "cweagans/composer-patches": "1.5.0",
         "drupal/lightning": "^8.1.0",
         "drupal/bootstrap": "^8.3.0-rc2",
-        "drupal/devel": "^8.1.0-alpha1"
+        "drupal/devel": "^8.1.0-alpha1",
+        "drupal/paragraphs": "^8.1"
     },
     "repositories": [
         {
