--- a/config/sync/views.view.files.yml
+++ b/config/sync/views.view.files.yml
@@ -568,7 +568,7 @@ display:
           decimal: .
           separator: ','
           format_plural: true
-          format_plural_string: !!binary MSBzdGVkA0Bjb3VudCBzdGVkZXI=
+          format_plural_string: '!!binary MSBzdGVkA0Bjb3VudCBzdGVkZXI='
           prefix: ''
           suffix: ''
           plugin_id: numeric
@@ -1010,7 +1010,7 @@ display:
           decimal: .
           separator: ','
           format_plural: false
-          format_plural_string: !!binary MQNAY291bnQ=
+          format_plural_string: '!!binary MQNAY291bnQ='
           prefix: ''
           suffix: ''
           plugin_id: numeric
