--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -5,12 +5,14 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_paragraphs
     - field.field.node.page.panelizer
     - field.field.node.page.scheduled_update
     - node.type.page
   module:
     - inline_entity_form
     - metatag
+    - paragraphs
     - path
     - text
     - workbench_moderation
@@ -38,6 +40,16 @@ content:
     type: metatag_firehose
     weight: 7
     settings: {  }
+    third_party_settings: {  }
+  field_paragraphs:
+    type: entity_reference_paragraphs
+    weight: 27
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
     third_party_settings: {  }
   langcode:
     type: language_select
