--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -5,8 +5,12 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_paragraphs
+    - field.field.node.page.panelizer
+    - field.field.node.page.scheduled_update
     - node.type.page
   module:
+    - entity_reference_revisions
     - metatag
     - text
     - user
@@ -29,9 +33,21 @@ content:
     label: above
     settings: {  }
     third_party_settings: {  }
+  field_paragraphs:
+    type: entity_reference_revisions_entity_view
+    weight: 3
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
   links:
     weight: 1
     settings: {  }
     third_party_settings: {  }
+  workbench_moderation_control:
+    weight: -20
 hidden:
   langcode: true
+  panelizer: true
+  scheduled_update: true
