--- a/config/sync/node.type.page.yml
+++ b/config/sync/node.type.page.yml
@@ -20,10 +20,10 @@ third_party_settings:
     default_moderation_state: draft
 _core:
   default_config_hash: F9lS2X3VyFwsFON4Qr-Y-pD4n9Cam3YniCuMkJGdNvM
-name: 'Simpel side'
+name: Indholdsside
 type: page
-description: 'Brug <em>simple sider</em> til dit statiske indhold, som f.eks. en "om os"-side.'
+description: ''
 help: ''
-new_revision: true
-preview_mode: 1
+new_revision: false
+preview_mode: 0
 display_submitted: false
