--- a/config/sync/user.role.layout_manager.yml
+++ b/config/sync/user.role.layout_manager.yml
@@ -13,3 +13,4 @@ permissions:
   - 'administer panelizer'
   - 'administer panelizer node landing_page defaults'
   - 'administer panelizer node page defaults'
+  - 'administer panelizer node news defaults'
