--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -80,6 +80,8 @@ theme:
   bartik: 0
   seven: 0
   bootstrap: 0
+  bellcom: 0
+  site: 0
 _core:
   default_config_hash: m2GVq11UAOVuNgj8x0t5fMOPujpvQQ_zxLoaly1BMEU
 langcode: da
