--- a/composer.json
+++ b/composer.json
@@ -20,34 +20,34 @@
         "composer/installers": "^1.0",
         "drupal-composer/drupal-scaffold": "^2.0.0",
         "cweagans/composer-patches": "1.5.0",
-        "drupal/lightning": "^8.1.0",
-        "drupal/bootstrap": "^8.3.0-rc2",
-        "drupal/devel": "^8.1.0-alpha1",
-        "drupal/paragraphs": "^8.1",
-        "drupal/linkit": "^8.4"
+        "drupal/bootstrap": "^3.0.0-rc2",
+        "drupal/devel": "^1.0.0-alpha1",
+        "drupal/paragraphs": "^1.0",
+        "drupal/linkit": "^4.0",
+        "acquia/lightning": "^2.0.0"
     },
-    "repositories": [
-        {
+    "repositories": {
+        "packages.drupal.org": {
             "type": "composer",
-            "url": "https://packagist.drupal-composer.org"
+            "url": "https://packages.drupal.org/8"
         }
-    ],
+    },
     "scripts": {
-      "post-install-cmd": [
-        "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
-        "Acquia\\Lightning\\ScriptHandler::deployLibraries"
-      ],
-      "post-update-cmd": [
-        "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
-        "Acquia\\Lightning\\ScriptHandler::deployLibraries"
-      ]
+        "post-install-cmd": [
+            "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
+            "Acquia\\Lightning\\ScriptHandler::deployLibraries"
+        ],
+        "post-update-cmd": [
+            "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
+            "Acquia\\Lightning\\ScriptHandler::deployLibraries"
+        ]
     },
     "config": {
         "bin-dir": "bin/"
     },
     "autoload": {
         "classmap": [
-          "scripts/ScriptHandler.php"
+            "scripts/ScriptHandler.php"
         ]
     },
     "extra": {
