Update custom themes

--- a/docroot/themes/custom/bellcom/bellcom.info.yml
+++ b/docroot/themes/custom/bellcom/bellcom.info.yml
@@ -3,8 +3,6 @@ type: theme
 description: Should never be used as a stand-alone theme.
 package: Bellcom
 core: 8.x
-libraries:
-  - bellcom/global-styling
+screenshot: dist/images/screenshot.png
 
 base theme: bootstrap
-
