--- a/docroot/themes/custom/site/site.info.yml
+++ b/docroot/themes/custom/site/site.info.yml
@@ -3,8 +3,24 @@ type: theme
 description: A beautiful client theme.
 package: Bellcom
 core: 8.x
-screenshot: dist/img/screenshot.png
-libraries:
-  - 'site/theme'
-
+screenshot: dist/images/screenshot.png
 base theme: bellcom
+
+regions:
+  main_navigation: 'Main navigation'
+  sidebar_left: 'Sidebar - left'
+  header: 'Top Bar'
+  highlighted: 'Highlighted'
+  help: 'Help'
+  content: 'Content'
+  footer_top_first: 'Footer top - first'
+  footer_top_second: 'Footer top - second'
+  footer_top_third: 'Footer top - third'
+  footer_top_fourth: 'Footer top - fourth'
+  page_top: 'Page top'
+  page_bottom: 'Page bottom'
+
+libraries:
+  - 'site/fonts'
+  - 'site/styling'
+  - 'site/scripts'
