--- a/docroot/themes/custom/site/src/compile-settings.json
+++ b/docroot/themes/custom/site/src/compile-settings.json
@@ -1,27 +1,21 @@
 {
   "autoprefixer": {
-    "browsers": {
-      "other": [
-        "last 2 versions",
-        "Android 2.3",
-        "Android >= 4",
-        "Chrome >= 20",
-        "Firefox >= 24",
-        "iOS >= 6",
-        "Opera >= 12",
-        "Safari >= 6",
-        "> 2.5%"
-      ],
-      "ie9": [
-        "ie 9"
-      ]
-    }
+    "browsers": [
+      "Android 2.3",
+      "Android >= 4",
+      "Chrome >= 20",
+      "Firefox >= 24",
+      "Explorer >= 8",
+      "iOS >= 6",
+      "Opera >= 12",
+      "Safari >= 6"
+    ]
   },
   "concat": {
     "core": [
-      "src/vendor/bootstrap/dist/js/bootstrap.js",
-      "src/vendor/page-layout/js/page-layout.js",
       "src/vendor/jquery-sticky/jquery.sticky.js",
+      "src/vendor/page-layout/js/page-layout.js",
+      "src/js/header.js",
       "src/js/init.js"
     ]
   }
