--- a/docroot/themes/custom/bellcom/bellcom.info.yml
+++ b/docroot/themes/custom/bellcom/bellcom.info.yml
@@ -3,6 +3,7 @@ type: theme
 description: Should never be used as a stand-alone theme.
 package: Bellcom
 core: 8.x
+hidden: true
 screenshot: dist/images/screenshot.png
 
 base theme: bootstrap
