--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,14 @@
         "composer/installers": "^1.0",
         "drupal-composer/drupal-scaffold": "^2.0.0",
         "cweagans/composer-patches": "1.5.0",
-        "drupal/bootstrap": "^3.0.0-rc2",
-        "drupal/devel": "^1.0.0-alpha1",
-        "drupal/paragraphs": "^1.0",
+        "drupal/bootstrap": "3.1",
+        "drupal/devel": "^1.0@beta",
+        "drupal/paragraphs": "1.x-dev",
         "drupal/linkit": "^4.0",
-        "acquia/lightning": "^2.0.0"
+        "acquia/lightning": "^2.0.0",
+        "drupal/admin_toolbar": "^1.18",
+        "drupal/twig_tweak": "^1.4",
+        "drupal/eva": "^1.0@RC"
     },
     "repositories": {
         "packages.drupal.org": {
