Refactor angled background

--- a/docroot/themes/custom/site/site.info.yml
+++ b/docroot/themes/custom/site/site.info.yml
@@ -9,6 +9,7 @@ base theme: bellcom
 regions:
   main_navigation: 'Main navigation'
   sidebar_left: 'Sidebar - left'
+  banner: 'Banner'
   header: 'Top Bar'
   highlighted: 'Highlighted'
   help: 'Help'
