Use the systems modernizr

--- a/docroot/themes/custom/site/src/compile-settings.json
+++ b/docroot/themes/custom/site/src/compile-settings.json
@@ -15,7 +15,7 @@
     "core": [
       "src/vendor/jquery-sticky/jquery.sticky.js",
       "src/vendor/page-layout/js/page-layout.js",
-      "src/js/header.js",
+      "src/vendor/bs3-sidebar/js/bs3-sidebar.js",
       "src/js/init.js"
     ]
   }
