--- a/docroot/themes/custom/site/bower.json
+++ b/docroot/themes/custom/site/bower.json
@@ -14,7 +14,8 @@
     "typography-helper": "~1.0.0",
     "base-scss-file": "~1.*",
     "jquery-sticky": "sticky-js#^1.0.3",
-    "bootstrap-chosen": "^1.0.1"
+    "bootstrap-chosen": "^1.0.1",
+    "bs3-sidebar": "^0.0.4"
   },
   "authors": [
     "Morten Nissen <mn@bellcom.dk> (http://bellcom.dk)"
