--- a/docroot/themes/custom/site/site.libraries.yml
+++ b/docroot/themes/custom/site/site.libraries.yml
@@ -11,9 +11,8 @@ styling:
 scripts:
   js:
     dist/js/core.js: {}
-    dist/js/modernizr.js: {}
-    http://127.0.0.1:35729/livereload.js: {}
   dependencies:
     - core/drupal
+    - core/modernizr
     - core/jquery
     - core/jquery.once
