--- a/docroot/themes/custom/site/bower.json
+++ b/docroot/themes/custom/site/bower.json
@@ -15,7 +15,8 @@
     "base-scss-file": "~1.*",
     "jquery-sticky": "sticky-js#^1.0.3",
     "bootstrap-chosen": "^1.0.1",
-    "bs3-sidebar": "^0.0.4"
+    "bs3-sidebar": "^0.0.4",
+    "sticky-kit": "^1.1.2"
   },
   "authors": [
     "Morten Nissen <mn@bellcom.dk> (http://bellcom.dk)"
