--- a/config/sync/field.storage.paragraph.field_background_color.yml
+++ b/config/sync/field.storage.paragraph.field_background_color.yml
@@ -15,6 +15,9 @@ settings:
       value: white
       label: Hvid
     -
+      value: light-gray
+      label: 'Lys grå'
+    -
       value: gray
       label: Grå
     -
