--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -25,6 +25,7 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  foobarblk: 0
   help: 0
   history: 0
   image: 0
@@ -45,6 +46,7 @@ module:
   link: 0
   linkit: 0
   locale: 0
+  logo_overlay: 0
   media_entity: 0
   media_entity_document: 0
   media_entity_image: 0
