--- a/config/sync/field.field.block_content.banner.field_image.yml
+++ b/config/sync/field.field.block_content.banner.field_image.yml
@@ -28,11 +28,11 @@ settings:
   title_field: false
   title_field_required: false
   default_image:
-    uuid: ''
+    uuid: e13903a1-516d-4ef9-9288-0de24ce2dd15
     alt: ''
     title: ''
-    width: null
-    height: null
+    width: 1275
+    height: 850
   handler: 'default:file'
   handler_settings: {  }
 field_type: image
