--- a/docroot/modules/custom/logo_overlay/logo_overlay.info.yml
+++ b/docroot/modules/custom/logo_overlay/logo_overlay.info.yml
@@ -1,10 +1,9 @@
-name: Foobar Block
+name: Logo overlay
 type: module
-description: 'This is an example Block Module for Drupal 8'
+description: ''
 package: Custom
 version: 8.x
 core: 8.x
 dependencies:
   - node
   - block
-
