--- a/docroot/themes/custom/site/src/compile-settings.json
+++ b/docroot/themes/custom/site/src/compile-settings.json
@@ -15,6 +15,8 @@
     "core": [
       "src/vendor/sticky-kit/jquery.sticky-kit.js",
       "src/js/layout.js",
+      "src/js/jquery.cookie.js",
+      "src/js/modal-popup.js",
       "src/js/blur-on-scroll.js",
       "src/js/init.js"  
     ]
