Banner improvements and corrections

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "acquia/lightning": "^2.0.0",
         "drupal/admin_toolbar": "^1.18",
         "drupal/twig_tweak": "^1.4",
-        "drupal/eva": "^1.0@RC"
+        "drupal/eva": "^1.0@RC",
+        "drupal/stage_file_proxy": "^1.0@alpha"
     },
     "repositories": {
         "packages.drupal.org": {
