--- a/config/sync/core.entity_form_display.block_content.banner.default.yml
+++ b/config/sync/core.entity_form_display.block_content.banner.default.yml
@@ -4,9 +4,12 @@ status: true
 dependencies:
   config:
     - block_content.type.banner
+    - entity_browser.browser.image_browser
     - field.field.block_content.banner.field_image
+    - field.field.block_content.banner.field_link
   module:
     - entity_browser
+    - link
     - workbench_moderation
 id: block_content.banner.default
 targetEntityType: block_content
@@ -25,6 +28,13 @@ content:
       open: true
       selection_mode: selection_append
     third_party_settings: {  }
+  field_link:
+    weight: 8
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
   info:
     type: string_textfield
     weight: -5
