--- a/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
@@ -4,8 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.node.vih_long_cource.body
+    - field.field.node.vih_long_cource.field_vih_cource_contact_person
     - field.field.node.vih_long_cource.field_vih_course_periods
     - field.field.node.vih_long_cource.field_vih_course_price
+    - field.field.node.vih_long_cource.field_vih_course_subsc_price
+    - field.field.node.vih_long_cource.field_vih_course_week_price
     - node.type.vih_long_cource
   module:
     - path
@@ -29,6 +32,14 @@ content:
     weight: 10
     settings: {  }
     third_party_settings: {  }
+  field_vih_cource_contact_person:
+    weight: 36
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
   field_vih_course_periods:
     weight: 32
     settings:
@@ -39,6 +50,18 @@ content:
     type: entity_reference_autocomplete
   field_vih_course_price:
     weight: 33
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+    type: number
+  field_vih_course_subsc_price:
+    weight: 34
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+    type: number
+  field_vih_course_week_price:
+    weight: 35
     settings:
       placeholder: ''
     third_party_settings: {  }
