--- a/config/sync/core.entity_form_display.paragraph.vih_course_slot.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_course_slot.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.paragraph.vih_course_slot.field_vih_cs_classes
     - field.field.paragraph.vih_course_slot.field_vih_cs_mandatory
     - field.field.paragraph.vih_course_slot.field_vih_cs_title
+    - field.field.paragraph.vih_course_slot.field_vih_cs_travel
     - paragraphs.paragraphs_type.vih_course_slot
   module:
     - workbench_moderation
@@ -35,6 +36,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+  field_vih_cs_travel:
+    weight: 9
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
 hidden:
   created: true
   status: true
