--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -6,8 +6,15 @@ dependencies:
     - field.field.user.user.field_user_birthday
     - field.field.user.user.field_user_name_first
     - field.field.user.user.field_user_name_last
+    - field.field.user.user.field_vih_user_about
+    - field.field.user.user.field_vih_user_phone
+    - field.field.user.user.field_vih_user_photo
+    - field.field.user.user.field_vih_user_title
+    - image.style.thumbnail
   module:
     - datetime
+    - image
+    - text
     - user
 id: user.user.default
 targetEntityType: user
@@ -36,6 +43,39 @@ content:
     type: string_textfield
   field_user_name_last:
     weight: 2
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+  field_vih_user_about:
+    weight: 9
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textfield
+  field_vih_user_phone:
+    weight: 8
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+  field_vih_user_photo:
+    type: entity_browser_file
+    weight: 10
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    third_party_settings: {  }
+  field_vih_user_title:
+    weight: 7
     settings:
       size: 60
       placeholder: ''
