--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -6,8 +6,14 @@ dependencies:
     - field.field.user.user.field_user_birthday
     - field.field.user.user.field_user_name_first
     - field.field.user.user.field_user_name_last
+    - field.field.user.user.field_vih_user_about
+    - field.field.user.user.field_vih_user_phone
+    - field.field.user.user.field_vih_user_photo
+    - field.field.user.user.field_vih_user_title
   module:
     - datetime
+    - image
+    - text
     - user
 id: user.user.default
 targetEntityType: user
@@ -31,6 +37,34 @@ content:
     type: string
   field_user_name_last:
     weight: 10
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+  field_vih_user_about:
+    weight: 13
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+  field_vih_user_phone:
+    weight: 12
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+  field_vih_user_photo:
+    weight: 14
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+  field_vih_user_title:
+    weight: 11
     label: above
     settings:
       link_to_entity: false
