--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -13,6 +13,7 @@ module:
   ctools_block: 0
   datetime: 0
   dblog: 0
+  devel: 0
   editor: 0
   embed: 0
   entity: 0
@@ -79,6 +80,7 @@ module:
   video_embed_media: 0
   views_infinite_scroll: 0
   views_ui: 0
+  viewsreference: 0
   workbench_moderation: 0
   menu_link_content: 1
   views: 10
