--- a/config/sync/views.view.nyheder_full_page.yml
+++ b/config/sync/views.view.nyheder_full_page.yml
@@ -1,4 +1,4 @@
-uuid: 144cc290-705d-44bc-ac29-0998004f3a15
+uuid: d567f585-e628-4df6-b7ba-388a020c51bf
 langcode: da
 status: true
 dependencies:
@@ -9,10 +9,10 @@ dependencies:
     - node
     - text
     - user
-id: news
-label: Nyheder
+id: nyheder_full_page
+label: 'Nyheder full page'
 module: views
-description: ''
+description: 'Listevisning over alle nyheder.'
 tag: ''
 base_table: node_field_data
 base_field: nid
@@ -50,16 +50,29 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: some
+        type: mini
         options:
-          items_per_page: 3
+          items_per_page: 9
           offset: 0
+          id: 0
+          total_pages: null
+          tags:
+            previous: ‹‹
+            next: ››
+          expose:
+            items_per_page: false
+            items_per_page_label: 'Items per page'
+            items_per_page_options: '5, 10, 25, 50'
+            items_per_page_options_all: false
+            items_per_page_options_all_label: '- All -'
+            offset: false
+            offset_label: Offset
       style:
         type: default
         options:
+          grouping: {  }
           row_class: 'col-xs-12 col-sm-4'
           default_row_class: true
-          uses_fields: false
       row:
         type: fields
         options:
@@ -300,6 +313,7 @@ display:
           expose:
             label: ''
           granularity: second
+      title: Nyheder
       header:
         area:
           id: area
@@ -311,7 +325,7 @@ display:
           empty: false
           tokenize: false
           content:
-            value: '<div class="fpnews-base-title"><h2><a href="nyheder">Nyheder</a></h2></div>'
+            value: '<div class="fpnews-base-title"><h2><a href="#">Nyheder</a></h2></div>'
             format: rich_text
           plugin_id: text
       footer: {  }
@@ -319,28 +333,30 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
-      css_class: row
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags:
         - 'config:field.storage.node.body'
-  embedded_teaser_list:
-    display_plugin: embed
-    id: embedded_teaser_list
-    display_title: Embed
+  page_1:
+    display_plugin: page
+    id: page_1
+    display_title: Page
     position: 1
     display_options:
       display_extenders: {  }
+      path: nyheder
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags:
