End of week update // 7 april. Commit not containing any design files, only internal updates and logic.

--- a/config/sync/core.entity_view_display.node.short_course_order.teaser.yml
+++ b/config/sync/core.entity_view_display.node.short_course_order.teaser.yml
@@ -24,4 +24,6 @@ content:
   links:
     weight: 100
 hidden:
+  field_vih_sco_course: true
+  field_vih_sco_ordered_options: true
   langcode: true
