--- a/config/sync/core.entity_view_display.node.vih_short_course.teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_short_course.teaser.yml
@@ -24,4 +24,7 @@ content:
   links:
     weight: 100
 hidden:
+  field_vih_cs_contact_person: true
+  field_vih_sc_option_groups: true
+  field_vih_sc_price: true
   langcode: true
