--- a/config/sync/editor.editor.rich_text.yml
+++ b/config/sync/editor.editor.rich_text.yml
@@ -55,6 +55,8 @@ settings:
       language_list: un
     stylescombo:
       styles: ''
+    linkit:
+      linkit_profile: ''
 image_upload:
   status: true
   scheme: public
