--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -3,17 +3,21 @@ langcode: da
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser
     - field.field.user.user.field_user_birthday
+    - field.field.user.user.field_user_description
     - field.field.user.user.field_user_name_first
     - field.field.user.user.field_user_name_last
+    - field.field.user.user.field_user_qualifications
+    - field.field.user.user.field_user_teacher_class_desc
     - field.field.user.user.field_vih_user_about
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
     - field.field.user.user.field_vih_user_title
-    - image.style.thumbnail
   module:
     - datetime
-    - image
+    - entity_browser
+    - paragraphs
     - text
     - user
 id: user.user.default
@@ -26,7 +30,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   contact:
-    weight: 5
+    weight: 9
     settings: {  }
     third_party_settings: {  }
   field_user_birthday:
@@ -34,6 +38,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
+  field_user_description:
+    weight: 11
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
   field_user_name_first:
     weight: 1
     settings:
@@ -48,15 +59,37 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+  field_user_qualifications:
+    type: entity_reference_paragraphs
+    weight: 13
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+  field_user_teacher_class_desc:
+    type: entity_reference_paragraphs
+    weight: 14
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
   field_vih_user_about:
-    weight: 9
+    weight: 5
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: text_textfield
   field_vih_user_phone:
-    weight: 8
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -64,7 +97,7 @@ content:
     type: string_textfield
   field_vih_user_photo:
     type: entity_browser_file
-    weight: 10
+    weight: 6
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -82,11 +115,11 @@ content:
     third_party_settings: {  }
     type: string_textfield
   language:
-    weight: 4
+    weight: 8
     settings: {  }
     third_party_settings: {  }
   timezone:
-    weight: 6
+    weight: 10
     settings: {  }
     third_party_settings: {  }
 hidden:
