--- a/config/sync/core.entity_view_display.node.vih_long_cource.teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.teaser.yml
@@ -24,4 +24,9 @@ content:
   links:
     weight: 100
 hidden:
+  field_vih_cource_contact_person: true
+  field_vih_course_periods: true
+  field_vih_course_price: true
+  field_vih_course_subsc_price: true
+  field_vih_course_week_price: true
   langcode: true
