--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.default.yml
@@ -4,10 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
+    - field.field.taxonomy_term.vih_class.field_vih_class_color
+    - field.field.taxonomy_term.vih_class.field_vih_class_image
     - field.field.taxonomy_term.vih_class.field_vih_class_material_price
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
+    - field.field.taxonomy_term.vih_class.field_vih_class_teacher
     - taxonomy.vocabulary.vih_class
   module:
+    - image
     - text
 id: taxonomy_term.vih_class.default
 targetEntityType: taxonomy_term
@@ -20,13 +24,21 @@ content:
     weight: 0
     settings: {  }
     third_party_settings: {  }
-  field_vih_class_class_packages:
-    weight: 2
+  field_vih_class_color:
+    weight: 4
     label: above
     settings:
-      link: true
+      link_to_entity: false
     third_party_settings: {  }
-    type: entity_reference_label
+    type: string
+  field_vih_class_image:
+    weight: 5
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
   field_vih_class_material_price:
     weight: 3
     label: above
@@ -48,4 +60,6 @@ content:
     third_party_settings: {  }
     type: number_decimal
 hidden:
+  field_vih_class_class_packages: true
+  field_vih_class_teacher: true
   langcode: true
