--- a/config/sync/field.field.node.page.field_paragraphs.yml
+++ b/config/sync/field.field.node.page.field_paragraphs.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_paragraphs
     - node.type.page
     - paragraphs.paragraphs_type.1_column_action_centered
+    - paragraphs.paragraphs_type.class_packages
     - paragraphs.paragraphs_type.list_of_news_teasers
     - paragraphs.paragraphs_type.video
   module:
@@ -27,6 +28,7 @@ settings:
       1_column_action_centered: 1_column_action_centered
       list_of_news_teasers: list_of_news_teasers
       video: video
+      class_packages: class_packages
     target_bundles_drag_drop:
       1_column_action_centered:
         enabled: true
@@ -37,4 +39,25 @@ settings:
       video:
         enabled: true
         weight: 4
+      class_packages:
+        enabled: true
+        weight: 11
+      vih_course_slot:
+        weight: 15
+        enabled: false
+      vih_option:
+        weight: 16
+        enabled: false
+      vih_option_group:
+        weight: 17
+        enabled: false
+      vih_ordered_course_period:
+        weight: 18
+        enabled: false
+      vih_ordered_course_slot:
+        weight: 19
+        enabled: false
+      vih_ordered_option:
+        weight: 20
+        enabled: false
 field_type: entity_reference_revisions
