--- a/docroot/themes/custom/site/site.info.yml
+++ b/docroot/themes/custom/site/site.info.yml
@@ -10,7 +10,8 @@ regions:
   drawer_left: 'Drawer - left'
   header_black_bar_left: 'Black bar - left'
   header_black_bar_right: 'Black bar - right'
-  header_navigation: 'Header - navigation'
+  mobile_header_navigation: 'Header - mobile navigation'
+  header_navigation: 'Header - navigation' 
   banner: 'Banner'
   header: 'Top Bar'
   content: 'Content'
